Change gallery content

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a class="nav-link" href="#about">/about-me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#gallery">/favorite-resources</a>
+            <a class="nav-link" href="#gallery">/kitty-cats</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact-form">/get-in-touch</a>
@@ -61,7 +61,7 @@
     <!-- About section start -->
     <section id="about" class="min-vh-100 py-5">
       <div class="section-header">
-        <h1 class="font-weight-bold col mb-2 mb-sm-5">/ about me</h1>
+        <h1 class="font-weight-bold col mb-2 mb-sm-5">/ about-me</h1>
       </div>
       <!-- about container start -->
       <div class="container-fluid">
@@ -115,13 +115,13 @@
     <!-- Gallery section start -->
     <section id="gallery" class="py-0 py-md-5">
       <div class="section-header">
-        <h1 class="font-weight-bold col mb-5">/ favorite-resources</h1>
+        <h1 class="font-weight-bold col mb-5">/ kitty-cats</h1>
       </div>
       <!-- Gallery container start -->
       <div class="container-fluid d-block">
         <div
           id="carouselExampleCaptions"
-          class="carousel slide"
+          class="carousel slide mr-0 mr-lg-5"
           data-ride="carousel"
         >
           <ol class="carousel-indicators">
@@ -132,36 +132,87 @@
             ></li>
             <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
             <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
           </ol>
           <div class="carousel-inner w-100 p-sm-0">
             <div class="carousel-item active">
               <img
-                src="https://cdn-media-1.freecodecamp.org/ghost/2019/01/cs50.png"
+                id="img1"
+                src="./images/tufo.jpg"
                 class="d-block w-100"
-                alt="An image of cs50"
+                alt="An image of Tufo"
               />
-              <div class="carousel-caption d-none d-md-block">
-                <h3>CS50</h3>
+              <div
+                class="carousel-caption d-none d-md-flex justify-content-center"
+              >
+                <h3>Tufo</h3>
               </div>
             </div>
             <div class="carousel-item">
               <img
-                src="https://discourse-user-assets.s3.amazonaws.com/original/2X/c/cf6e8e0a75acb7aa900eb304270a6407ae1d9e2c.jpg"
+                id="img2"
+                src="./images/nori.jpg"
                 class="d-block w-100"
-                alt="An image of freecodecamp"
+                alt="An image of Nori"
               />
-              <div class="carousel-caption d-none d-md-block">
-                <h3>freeCodeCamp</h3>
+              <div
+                class="carousel-caption d-none d-md-flex justify-content-center"
+              >
+                <h3>Nori</h3>
               </div>
             </div>
             <div class="carousel-item">
               <img
-                src="https://clipground.com/images/w3s-png-2.png"
+              id="img3"
+                src="./images/mochi.JPG"
                 class="d-block w-100"
-                alt="..."
+                alt="An image of Mochi"
               />
-              <div class="carousel-caption d-none d-md-block">
-                <h3>W3Schools</h3>
+              <div
+                class="carousel-caption d-none d-md-flex justify-content-center"
+              >
+                <h3>Mochi</h3>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                id="img4"
+                src="./images/tufo2.JPG"
+                class="d-block w-100"
+                alt="An image of Tufo"
+              />
+              <div
+                class="carousel-caption d-none d-md-flex justify-content-center"
+              >
+                <h3>Tufo</h3>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                id="img5"
+                src="./images/nori2.JPG"
+                class="d-block w-100"
+                alt="An image of Nori"
+              />
+              <div
+                class="carousel-caption d-none d-md-flex justify-content-center"
+              >
+                <h3>Nori</h3>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+              id="img6"
+                src="./images/mochi2.JPG"
+                class="d-block w-100"
+                alt="An image of Mochi"
+              />
+              <div
+                class="carousel-caption d-none d-md-flex justify-content-center"
+              >
+                <h3>Mochi</h3>
               </div>
             </div>
           </div>
