--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <img id="img1" src="./images/tufo.jpg" class="d-block w-100" alt="An image of Tufo" />
             <div class="carousel-caption d-none d-md-flex justify-content-center">
               <h3>Tufo</h3>
-            </div>g
+            </div>
           </div>
           <div class="carousel-item">
             <img id="img2" src="./images/nori.jpg" class="d-block w-100" alt="An image of Nori" />
